Add player rename possibilities and custom titles

--- a/html/backend/index.html
+++ b/html/backend/index.html
@@ -97,6 +97,16 @@
                 </div>
                 <div class="item">
                     <div class="right floated content">
+                        <a class="ui button" href="/backend/renamePlayer"><i class="share icon"></i></a>
+                    </div>
+                    <i class="large edit middle aligned icon"></i>
+                    <div class="content">
+                        <a class="header" style="font-weight: bold;">Rename player</a>
+                        <div class="description">Rename a player across all databases.</div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="right floated content">
                         <button class="ui button" id="reload"><i class="upload icon"></i></button>
                     </div>
                     <i class="large upload middle aligned icon"></i>
