--- a/html/backend/layout.html
+++ b/html/backend/layout.html
@@ -7,14 +7,8 @@
     </head>
     <body>
         {{contentPreHeader}}
-        <div class="ui sidebar inverted vertical menu">
+        <div class="ui sidebar inverted vertical menu" id="menu">
             <a class="item" href="/backend">Menu</a>
-            <a class="item" href="/backend/competitions">Competitions</a>
-            <a class="item" href="/backend/players">Players</a>
-            <a class="item" href="/backend/importSpreadsheet">Import spreadsheet</a>
-            <a class="item" href="/backend/importStandings">Bulk import standings</a>
-            <a class="item" href="/backend/databaseChecks">Database checks</a>
-            <a class="item" href="/backend/renamePlayer">Rename player</a>
         </div>
         <div class="pusher">
             <button class="ui secondary basic button" id="menuButton"><i class="bars icon"></i></button>
@@ -29,6 +23,17 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
         <script>
+            $.getJSON("/backend/api/menu", (data, status, x) => {
+                if(status == "success") {
+                    data.forEach(element => {
+                        if(element.type == "link") {
+                            let item = $('<a></a>').addClass("item").text(element.title).attr("href", element.link);
+                            $('#menu').append(item);
+                        }
+                    });
+                }
+            })
+
             $('#menuButton').on('click', () => {$('.ui.sidebar').sidebar('toggle')});
         </script>
         {{script}}
