Added remark about calculation of times on records

--- a/html/records.html
+++ b/html/records.html
@@ -12,6 +12,10 @@
             <br>
             <h1 class="ui header" style="font-weight: bold; font-size: 3.2rem;">Roulette Rivals Records</h1>
             <br><br>
+            <span style="font-style: italic;">
+                Records are timed using the spin-timer, starting at the arrival of the spin, ending at pressing "Done" on the Roulette page, or exiting the level.<br>
+                Multi-map records are calculated by adding up the spin-timers of all maps.
+            </span>
             <table class="ui structured celled inverted table">
                 <thead>
                     <tr>
