Newest configs + support for timestamps

--- a/html/backend/competitionImport/content.html
+++ b/html/backend/competitionImport/content.html
@@ -30,10 +30,13 @@
         <input type="text" placeholder="ID of the spreadsheet" id="inputID">
     </div>
     <div class="ui fluid input">
-        <input type="text" placeholder="Tab-number of the spreadsheet" id="inputTab">
+        <input type="text" placeholder="Name of the spreadsheet-tab" id="inputTab">
     </div>
     <div class="ui fluid input">
         <input type="text" placeholder="Competition string (e.g. RRWC)" id="inputComp">
+    </div>
+    <div class="ui fluid input">
+        <input type="text" placeholder="Year of the tournament" id="yearInput">
     </div>
     <div class="ui fluid input">
         <input type="text" placeholder="(Optional) Column assignment override" id="inputColAs">
