--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -156,6 +156,7 @@
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/luxon@2.0.2/build/global/luxon.min.js"></script>
         <script src="utils.js"></script>
 
         <script>
@@ -241,7 +242,7 @@
                 if(data.maps.length <= 5) {
                     row.append($("<td></td>").text(data.competition));
                     row.append($("<td></td>").text(data.platform));
-                    row.append($("<td></td>").text(data.round));
+                    row.append($("<td></td>").text(data.round).attr("data-html", luxon.DateTime.fromISO(data.timestamp).toLocaleString(luxon.DateTime.DATETIME_FULL)).popup());
                     row.append($("<td></td>").text(data.player1));
                     row.append($("<td></td>").text(data.score));
                     row.append($("<td></td>").text(data.player2));
@@ -270,7 +271,7 @@
                 } else {
                     row.append($("<td></td>").text(data.competition).attr("rowspan", "2"));
                     row.append($("<td></td>").text(data.platform).attr("rowspan", "2"));
-                    row.append($("<td></td>").text(data.round).attr("rowspan", "2"));
+                    row.append($("<td></td>").text(data.round).attr("rowspan", "2").attr("data-html", luxon.DateTime.fromISO(data.timestamp).toLocaleString(luxon.DateTime.DATETIME_FULL)).popup());
                     row.append($("<td></td>").text(data.player1).attr("rowspan", "2"));
                     row.append($("<td></td>").text(data.score).attr("rowspan", "2"));
                     row.append($("<td></td>").text(data.player2).attr("rowspan", "2"));
