--- a/html/leaderboards.html
+++ b/html/leaderboards.html
@@ -20,6 +20,8 @@
                 <option value="Matches">Amount of matches</option>
                 <option value="PercentageDecider">Percentage of matches with decider</option>
                 <option value="DeciderWinrate">Winrate of decider maps</option>
+                <option value="OwnMapWinrate">Winrate of own map-picks</option>
+                <option value="OpponentMapWinrate">Winrate of opponent map-picks</option>
                 <option value="LongestWinSpree">Longest winning-spree</option>
                 <option value="MapPlayed">Amount of matches on one map</option>
                 <option value="MapWR">Winrate on one map</option>
@@ -149,6 +151,14 @@
                                 case "DeciderWinrate":
                                     row.append($("<td></td>").text(Math.floor((data.rankings[e].deciderWin/data.rankings[e].matchesWithDecider)*1000)/10 + "%"))
                                     if(data.rankings[e].matchesWithDecider == 0) shouldAdd = false;
+                                    break;
+                                case "OwnMapWinrate":
+                                    row.append($("<td></td>").text(Math.floor((data.rankings[e].ownMapsWon/data.rankings[e].ownMaps)*1000)/10 + "%"));
+                                    if(data.rankings[e].ownMaps == 0) shouldAdd = false;
+                                    break;
+                                case "OpponentMapWinrate":
+                                    row.append($("<td></td>").text(Math.floor((data.rankings[e].opponentMapsWon/data.rankings[e].opponentMaps)*1000)/10 + "%"));
+                                    if(data.rankings[e].opponentMaps == 0) shouldAdd = false;
                                     break;
                             }
                             if(shouldAdd) $('#ranking').append(row);
