Close button on leaderboards & records aswell

--- a/html/leaderboards.html
+++ b/html/leaderboards.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="darkly.css">
     </head>
     <body>
+        <a class="tertiary huge ui icon button" href="/">
+            <i class="inverted icon angle left"></i>
+        </a>
         <div class="ui container">
             <br>
             <h1 class="ui header" style="font-weight: bold; font-size: 3.2rem;">Leaderboards</h1>
